--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation libs.androidx.constraintlayout
     implementation libs.androidx.legacy.support.v4
     implementation libs.androidx.fragment.ktx
+    //implementation libs.androidx.security.crypto
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
@@ -93,6 +94,17 @@ dependencies {
 
     // Paging
     implementation "androidx.paging:paging-runtime:3.1.1"
+
+    //datastore preferences
+    implementation "androidx.datastore:datastore-preferences:1.1.1"
+
+    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+    implementation 'io.jsonwebtoken:jjwt:0.12.6'
+
+    implementation ("androidx.biometric:biometric:1.1.0")
+
+
+
 
 }
 
